# java_morphy

./: Except.dic  dept_test.py  java_test.py  logging_config.py  one_dept.py  p_test.py  pyproject.toml  test.py
app/: __init__.py  api_models.py  extensions.py  resources.py
jmorphy/: __init__.py  morphy.py  settings.py
morphy/: __init__.py  morphy.py  settings.py
num2text/: __init__.py  num2text.py
tests/: test.py
