[tool.poetry]
name = "jtest"
version = "0.1.0"
description = ""
authors = ["Sergio Dolgov <sdolgov77@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jpype1 = "^1.5.0"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
flask-restx = "^1.3.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
